@startuml

class FrontendService {
    +fetchAvailableServices()
    +requestService(serviceId)
    +getUserSession()
}

class BackendAPI {
    +getAvailableServices()
    +processServiceRequest(serviceId, userId)
    +authenticateUser(token)
}

class ExternalServiceAdapter {
    +callService(serviceId, payload)
    +mapResponseToDomainModel(response)
}

class DatabaseService {
    +saveServiceRequest(userId, serviceId, status)
    +getUserSession(userId)
    +updateServiceStatus(requestId, status)
}

class AuthService {
    +validateToken(token)
    +checkPermissions(userId, action)
}

FrontendService --> BackendAPI : uses
BackendAPI --> ExternalServiceAdapter : uses
BackendAPI --> DatabaseService : uses
BackendAPI --> AuthService : uses
DatabaseService --> BackendAPI : interacts with
AuthService --> BackendAPI : interacts with

@enduml
